[package]
name = "rlt"
version = "0.1.0"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "A universal load testing library, with real-time tui support"
categories = [
    "visualization",
    "command-line-utilities",
    "development-tools::profiling",
]
edition = "2021"
keywords = ["cli", "load-testing", "performance", "http"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wfxr/rlt"

[lib]
name = "rlt"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
byte-unit = "5"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
flume = "0.11"
humantime = "2"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "time", "signal", "macros"] }
tokio-util = "0.7"
ratatui = { version = "0", features = ["crossterm"], default-features = false }
rand = "0.8"
async-trait = "0.1"
hdrhistogram = "7"
itertools = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["client"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
