[package]
name = "rlt"
version = "0.1.1-alpha.1"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "A universal load testing library for Rust, with real-time tui support"
categories = [
    "visualization",
    "command-line-utilities",
    "development-tools::profiling",
]
edition = "2021"
keywords = ["performance", "load-testing", "benchmark", "cli"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wfxr/rlt"

[lib]
name = "rlt"
path = "src/lib.rs"

[features]
default = ["http"]
http = ["dep:http"]

[dependencies]
anyhow = "1"
byte-unit = "5.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
flume = "0.11"
humantime = "2.1"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["rt", "time", "signal", "macros"] }
tokio-util = "0.7"
ratatui = { version = "0.26", features = [
    "crossterm",
], default-features = false }
async-trait = "0.1"
hdrhistogram = "7.5"
itertools = "0.12"
tabled = "0.15"
http = { version = "1.1", optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread"] }
bytes = "1.6"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["client"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
reqwest = "0.12"
